Fix horizontal scroll from hero image

--- a/src/sections/Hero/styles.scss
+++ b/src/sections/Hero/styles.scss
@@ -27,8 +27,17 @@
         margin: 0;
     }
 
+    .picture-wrapper {
+        max-width: 100vw;
+        overflow: hidden;
+        transform: translateX(-50%);
+        position: absolute;
+        top: 52px;
+        left: 50%;
+        z-index: -1;
+    }
+
     .picture {
-        // align-self: center;
         @include image-for-xsmall(572px, 294px);
         @include image-for-small(767px, 394px);
         @include image-for-medium(991px, 509px);
@@ -36,15 +45,8 @@
         @include image-for-xlarge(1440px, 740px);
 
         transform: translateX(-50%);
-        position: absolute;
-        top: 52px;
+        position: relative;
         left: 50%;
-        z-index: -1;
-        // @include for-small {
-        //     transform: unset;
-        //     position: unset ;
-        //     left: unset;
-        // }
     }
 
     .hero-tagline {
